--- a/android/skin/qt/extended-pages/help-page.ui
+++ b/android/skin/qt/extended-pages/help-page.ui
@@ -200,7 +200,7 @@
     <attribute name="title">
      <string>About</string>
     </attribute>
-    <widget class="QPlainTextEdit" name="help_adbPortBox">
+    <widget class="QPlainTextEdit" name="help_adbSerialNumberBox">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -231,7 +231,7 @@
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="plainText">
-      <string>5037</string>
+      <string notr="true">emulator-5554</string>
      </property>
     </widget>
     <widget class="QGroupBox" name="androidVersionTitle">
@@ -258,7 +258,7 @@
       <string>Title</string>
      </property>
     </widget>
-    <widget class="QGroupBox" name="adbPortTitle">
+    <widget class="QGroupBox" name="adbSerialNumberTitle">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -276,7 +276,7 @@
       <string notr="true">border: 0px;</string>
      </property>
      <property name="title">
-      <string>Emulator ADB port</string>
+      <string>Emulator ADB serial number</string>
      </property>
      <property name="ColorGroup" stdset="0">
       <string>Title</string>
@@ -450,6 +450,14 @@
       <string>Title</string>
      </property>
     </widget>
+    <zorder>adbSerialNumberTitle</zorder>
+    <zorder>availVersionTitle</zorder>
+    <zorder>help_adbSerialNumberBox</zorder>
+    <zorder>androidVersionTitle</zorder>
+    <zorder>versionTitle</zorder>
+    <zorder>help_versionBox</zorder>
+    <zorder>help_androidVersionBox</zorder>
+    <zorder>help_latestVersionBox</zorder>
    </widget>
   </widget>
  </widget>
