--- a/android/skin/qt/resources.qrc
+++ b/android/skin/qt/resources.qrc
@@ -9,14 +9,13 @@
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 -->
-<!DOCTYPE RCC><RCC>
+<RCC>
     <qresource prefix="/">
         <!-- Qt wants an extra 'qt/' in this path name -->
         <file alias="qt/etc/qt.conf">etc/qt.conf</file>
         <file alias="styles/stylesheet_template.css">styles/stylesheet_template.css</file>
         <file alias="styles/fonts_stylesheet_template.css">styles/fonts_stylesheet_template.css</file>
     </qresource>
-
     <qresource prefix="/lib/fonts">
          <!-- The names 'Roboto*' are used to load the fonts in
               android/skin/qt/winsys-qt.cpp -->
@@ -24,7 +23,6 @@
         <file alias="Roboto-Bold">fonts/Roboto-Bold.ttf</file>
         <file alias="Roboto-Medium">fonts/Roboto-Medium.ttf</file>
     </qresource>
-
     <qresource prefix="/light">
         <!-- Main list of tool buttons -->
         <file alias="back">images/light/System_Back_678.svg</file>
@@ -179,15 +177,27 @@
         <file alias="toggle_on">images/dark/toggle_on.png</file>
         <file alias="virtSensors">images/dark/Virtual_Sensors_677.svg</file>
     </qresource>
-
     <qresource prefix="/cursor">
         <file alias="zoom_cursor">images/cursor/zoom_cursor.svg</file>
     </qresource>
-
     <qresource prefix="/multitouch">
         <file alias="touch_point">images/multitouch/touch_point.png</file>
         <file alias="touch_point_2x">images/multitouch/touch_point_2x.png</file>
         <file alias="center_point">images/multitouch/center_point.png</file>
         <file alias="center_point_2x">images/multitouch/center_point_2x.png</file>
+    </qresource>
+    <qresource prefix="/phone-model">
+        <file alias="model.obj">phone-model/model.obj</file>
+        <file alias="specular-map.png">phone-model/model-specular-map.png</file>
+        <file alias="gloss-map.png">phone-model/model-gloss-map.png</file>
+        <file alias="env-map-back.png">phone-model/env-map-back.png</file>
+        <file alias="env-map-bottom.png">phone-model/env-map-bottom.png</file>
+        <file alias="env-map-front.png">phone-model/env-map-front.png</file>
+        <file alias="env-map-left.png">phone-model/env-map-left.png</file>
+        <file alias="env-map-right.png">phone-model/env-map-right.png</file>
+        <file alias="env-map-top.png">phone-model/env-map-top.png</file>
+        <file alias="diffuse-map.png">phone-model/model-diffuse-map.png</file>
+        <file alias="frag.glsl">phone-model/frag.glsl</file>
+        <file alias="vert.glsl">phone-model/vert.glsl</file>
     </qresource>
 </RCC>
