Add license information to the Help page
Add a "Licenses" tab to the Help page.
Populate this with the contents of NOTICE.txt from
the <SDK path>/tools/ directory.

Change-Id: Ib4797dcef5504f2d4bf1048004383211e2ba16c7

--- a/android/skin/qt/extended-pages/help-page.ui
+++ b/android/skin/qt/extended-pages/help-page.ui
@@ -196,6 +196,27 @@
      </property>
     </widget>
    </widget>
+   <widget class="QWidget" name="tab">
+    <attribute name="title">
+     <string>Licenses</string>
+    </attribute>
+    <widget class="QTextBrowser" name="help_licenseText">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>570</width>
+       <height>500</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Roboto</family>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+    </widget>
+   </widget>
    <widget class="QWidget" name="tab_5">
     <attribute name="title">
      <string>About</string>
