--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -24,7 +24,7 @@
 *::disabled[ColorGroup="Tool"] { color: %%DISABLED_TOOL_COLOR%%}
 *[ColorGroup="Tool"] { color: %%TOOL_COLOR%%}
 *[class="EditableValue"]  { color: %%TEXT_COLOR%% }
-*[ColorGroup="SliderLabel"]  { color: %%DIVIDER_COLOR%% }
+*[ColorGroup="SliderLabel"]  { color: %%TEXT_COLOR%% }
 *[ColorGroup="SmsBox"] { border: 1px solid %%BOX_COLOR%% }
 *[ColorGroup="HorizDivider"] {
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0  %%LARGE_DIVIDER_COLOR%%, stop: 1 %%TAB_SELECTED_COLOR%%);
