--- a/android/skin/qt/extended.ui
+++ b/android/skin/qt/extended.ui
@@ -576,7 +576,7 @@ font-family: &quot;Roboto&quot;</string>
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>268</y>
+     <y>310</y>
      <width>194</width>
      <height>42</height>
     </rect>
@@ -657,7 +657,7 @@ font-family: &quot;Roboto&quot;</string>
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>310</y>
+     <y>352</y>
      <width>194</width>
      <height>42</height>
     </rect>
@@ -738,7 +738,7 @@ font-family: &quot;Roboto&quot;</string>
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>264</y>
+     <y>306</y>
      <width>194</width>
      <height>4</height>
     </rect>
@@ -756,6 +756,53 @@ font-family: &quot;Roboto&quot;</string>
     <string>HorizDivider</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="virtSensorsButton">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>264</y>
+     <width>194</width>
+     <height>42</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">text-align: left; padding: 0px 0px 0px 16px;</string>
+   </property>
+   <property name="text">
+    <string>Virtual sensors</string>
+   </property>
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/light/virtSensors</normaloff>:/light/virtSensors</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>20</width>
+     <height>20</height>
+    </size>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+   <property name="themeIconName" stdset="0">
+    <string>virtSensors</string>
+   </property>
+   <property name="ColorGroup" stdset="0">
+    <string>MajorTab</string>
+   </property>
+  </widget>
   <zorder>spacer2Button</zorder>
   <zorder>spacer1Button</zorder>
   <zorder>settingsButton</zorder>
@@ -769,6 +816,7 @@ font-family: &quot;Roboto&quot;</string>
   <zorder>stackedWidget</zorder>
   <zorder>VertDivider</zorder>
   <zorder>line</zorder>
+  <zorder>virtSensorsButton</zorder>
  </widget>
  <customwidgets>
   <customwidget>
