Make the device model movable and compute according accelerometer values
Change-Id: I6ff032d7c4577252ed564b1d5df29dfc24bb2abb

--- a/android/skin/qt/extended-pages/virtual-sensors-page.ui
+++ b/android/skin/qt/extended-pages/virtual-sensors-page.ui
@@ -170,6 +170,35 @@
       </rect>
      </property>
     </widget>
+    <widget class="QRadioButton" name="accelModeRotate">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>310</y>
+       <width>103</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Rotate</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="accelModeMove">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>340</y>
+       <width>103</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Move</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
